[metadata]
name = grav-toolbox
version = attr: gravtools.__version__
author = Andreas Hellerschmied
author_email = andreas.hellerschmied@bev.gv.at
url = https://github.com/ahellers/GravTools
description = Gravity survey utility tools
long_description = file: README.md
long_description_content_type = text/markdown
keywords = gravity, gravimeter, least squares adjustment, geodesy, geophysics
license = GNU GPLv3
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    PyQt5
    pandas
    pyqtgraph
    scipy
    scikit-learn

[options.extras_require]
gis =
    geopandas

[options.entry_points]
console_scripts =
    gt = gravtools.scripts.run_gui:run_gui


